# libultrahdr-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  GOAL.md  README.md  TASKS.md
.github/actions/build-wasm/: action.yml
.github/workflows/: ci.yml  deploy-browser.yml  release.yml
patches/: libultrahdr-no-threads.patch
ultrahdr/: Cargo.toml
ultrahdr-bake/: Cargo.toml
ultrahdr-bake/src/: cli.rs  color.rs  detect.rs  encode.rs  main.rs  motion.rs
ultrahdr-browser/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
ultrahdr-browser/src/: App.tsx  index.css  main.js  main.tsx  style.css  worker.js  worker.ts
ultrahdr-browser/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx  textarea.tsx
ultrahdr-browser/src/lib/: i18n.tsx
ultrahdr-browser/src/types/: worker.ts
ultrahdr-sys/: Cargo.toml  build.rs
ultrahdr-sys/patches/: libultrahdr-no-threads.patch
ultrahdr/benches/: codec_bench.rs  transfer_bench.rs
ultrahdr/examples/: oneclick.rs  ultrahdr_app.rs
ultrahdr/src/: decoder.rs  encoder.rs  error.rs  lib.rs  mpf.rs  simd.rs  types.rs
ultrahdr/src/color/: gamut.rs  icc.rs  mod.rs  transfer.rs
ultrahdr/src/gainmap/: math.rs  metadata.rs  mod.rs
ultrahdr/src/jpeg/: decode.rs  encode.rs  mod.rs
ultrahdr/tests/: bench_performance.rs  bitexact.rs  compare_with_sys.rs  debug_encode.rs  decode_profile.rs  perf_compare.rs  roundtrip.rs  simd_equivalence.rs
