[package]
name = "ultrahdr-bake"
version = "0.1.0"
edition.workspace = true
description = "Bake HDR intent + SDR base into an UltraHDR JPEG (CLI)"
license = "Apache-2.0"
publish = false

[features]
default = ["vendored", "iso21496"]
vendored = ["ultrahdr/vendored"]
shared = ["ultrahdr/shared"]
gles = ["ultrahdr/gles"]
iso21496 = ["ultrahdr/iso21496"]
no-threads = ["ultrahdr/no-threads"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ultrahdr = { path = "../ultrahdr" }
memchr = "2"
bytes = "1"
img-parts = "0.4"
quick-xml = "0.38.4"
