[package]
name = "ultrahdr-bake"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bake HDR intent + SDR base into an UltraHDR JPEG (CLI)"
publish = false

[features]
default = ["vendored", "iso21496"]
vendored = ["ultrahdr/vendored"]
shared = ["ultrahdr/shared"]
gles = ["ultrahdr/gles"]
iso21496 = ["ultrahdr/iso21496"]
no-threads = ["ultrahdr/no-threads"]

[dependencies]
ultrahdr = { path = "../ultrahdr" }
anyhow.workspace = true
clap.workspace = true
memchr.workspace = true
bytes.workspace = true
img-parts.workspace = true
quick-xml.workspace = true
