[package]
name = "ultrahdr-bake"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bake HDR intent + SDR base into an UltraHDR JPEG (CLI)"
exclude = [
  "/target",
  "/CMakeFiles",
  "/artifacts",
]

[features]
default = []

[dependencies]
ultrahdr = { workspace = true }
anyhow.workspace = true
clap.workspace = true
memchr.workspace = true
bytes.workspace = true
img-parts.workspace = true
quick-xml.workspace = true
