[package]
name = "ultrahdr-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
links = "uhdr"
build = "build.rs"
description = "Raw FFI bindings to libultrahdr"
exclude = [
  "/target",
  "/CMakeFiles",
  "/artifacts",
  "/libultrahdr/build",
  "/libultrahdr/CMakeFiles",
]

[features]
default = ["vendored", "iso21496"]
# Build libjpeg-turbo and other deps from source via upstream CMake flag.
vendored = []
# Link shared library instead of static.
shared = []
# Enable GLES in upstream build (links EGL/GLES).
gles = []
# Enable writing ISO/TS 21496-1 gain map metadata.
iso21496 = []
# Disable std::thread usage in upstream build (single-threaded).
no-threads = []
# Raise UHDR_MAX_DIMENSION to libjpeg-turbo's JPEG_MAX_DIMENSION.
jpeg-max-dimension = []

[dependencies]

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
