[package]
name = "ultrahdr"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["hdr", "jpeg", "gainmap", "image"]
categories = ["multimedia::images"]
description = "Pure Rust UltraHDR gain-map JPEG encoder/decoder"
exclude = ["/target", "/artifacts"]

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
rayon = { version = "1", optional = true }
roxmltree = "0.20"

[dev-dependencies]
anyhow.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }
ultrahdr-sys.workspace = true

[[bench]]
name = "transfer_bench"
harness = false
