[package]
name = "ultrahdr"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["hdr", "jpeg", "gainmap", "image"]
categories = ["multimedia::images"]
description = "Pure Rust UltraHDR gain-map JPEG encoder/decoder"
exclude = ["/target", "/artifacts"]

[features]
default = ["simd"]
rayon = ["dep:rayon"]
simd = ["dep:pulp"]
zune-jpeg = ["dep:zune-jpeg", "dep:zune-core"]

[dependencies]
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
pulp = { version = "0.22", optional = true }
rayon = { version = "1", optional = true }
roxmltree = "0.20"
zune-jpeg = { version = "0.5", optional = true }
zune-core = { version = "0.5", optional = true }

[dev-dependencies]
anyhow.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }
ultrahdr-sys.workspace = true

[[bench]]
name = "transfer_bench"
harness = false

[[bench]]
name = "codec_bench"
harness = false
